dodanie zaopatrzenia dla konkretnej apteki - endpoint - /zaopatrzenie/apteka/{id}
